# token-burn

./: .gitignore  AGENTS.md  DECISIONS.md  Makefile  index.html  package-lock.json  package.json  pyproject.toml  theme-rename-exceptions.md  vercel.json
.claude/: launch.json
api/: daily.ts  sessions.ts  types.ts
data/: annotations.json
docs/: ACCEPTANCE_CRITERIA.md  ACCEPTANCE_CRITERIA_v2.md  SPEC.md  SPEC_REVIEW.md  SPEC_REVIEW_v2.md  SPEC_v2.md
public/data/: daily-burn.json  session-contributions.json  session-hashes.json
scripts/: collect.py  migrate_legacy.py
src/: App.tsx  index.css  types.ts
src/components/: DailyTable.tsx  Drivers.tsx  FidelityBadge.tsx  Header.tsx  Heatmap.tsx  HeroSparkline.tsx  ScaleEquivalents.tsx  TrendLine.tsx
src/hooks/: useTokenData.ts
src/styles/themes/: default.css
src/utils/: chartColors.ts  dates.ts  tokens.ts
tests/collector/: test_collect.py
tests/collector/fixtures/: README.md  annotations.json  codex_session.jsonl  malformed_session.jsonl  midnight_spanning_session.jsonl  simple_session.jsonl
tests/ui/: dashboard.spec.ts  playwright.config.ts
